Fix menu buttons being behind header bug

--- a/_sass/components/nav.sass
+++ b/_sass/components/nav.sass
@@ -17,8 +17,9 @@
 
 .nav
     position: fixed
+    z-index: 100
     background-color: #fff
-    opacity: 0.9
+    opacity: 0.95
     //box-shadow: 0 0px 4px 0 rgba(0,0,0,0.18), 0 0px 10px 0 rgba(0,0,0,0.15)
     right: 0
     top: 0
